# Tennis-Edge

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
docs/: HANDOFF.md  PHASE_3_V2_PLAN.md  PROGRESS.md
scripts/: import_phase1_data.py  macmini_bootstrap.sh
src/tennis_edge/: __init__.py  cli.py  cli_ui.py  config.py  realtime.py  scanner.py  scanner_live.py  tick_logger.py
src/tennis_edge/agent/: __init__.py  decisions.py  llm.py  loop.py  monitor_bridge.py  runtime.py  safety.py  settlement.py
src/tennis_edge/backtest/: engine.py  metrics.py  report.py
src/tennis_edge/data/: db.py  history.py  ingest.py  models.py  schema.py
src/tennis_edge/exchange/: auth.py  base.py  client.py  livescore.py  matching.py  paper.py  schemas.py  ws.py
src/tennis_edge/features/: builder.py  fatigue.py  form.py  h2h.py  surface.py  tournament.py
src/tennis_edge/model/: calibration.py  inplay.py  predictor.py  training.py
src/tennis_edge/ratings/: glicko2.py  tracker.py
src/tennis_edge/strategy/: kelly.py  risk.py  sizing.py
src/tennis_edge/utils/: logging.py  time.py
tests/: conftest.py  test_agent_decisions.py  test_agent_gemini_eval.py  test_agent_llm.py  test_agent_loop.py  test_agent_monitor_bridge.py  test_agent_runtime.py  test_agent_safety.py  test_agent_settlement.py  test_cli_ui.py  test_exchange_idempotency.py  test_features.py  test_glicko2.py  test_kelly.py  test_risk_concurrency.py  test_ws_timestamps.py
