[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tennis-edge"
version = "0.1.0"
description = "Kalshi tennis prediction market trading bot"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "joblib>=1.3",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "pytest-asyncio", "ruff", "mypy", "respx"]
boost = ["xgboost>=2.0", "lightgbm>=4.0"]
agent = ["google-genai>=1.70"]  # Phase 2 agent LLM (Gemini 3.x)

[project.scripts]
tennis-edge = "tennis_edge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_edge"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
